# r-lombok-macros

./: .clippy.toml  .gitignore  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
src/: accessors.rs  data.rs  getter.rs  lib.rs  setter.rs  to_string.rs
tests/: accessors.rs  data.rs  getter.rs  getter_setter.rs  to_string.rs
