[package]
categories = ["macro"]
description = "r-lombok is a rust macros that automatically plugs into your editor and build tools"
edition = "2021"
homepage = "https://github.com/dengzhq/r-lombok-macros"
keywords = ["lombok"]
license = "MIT"
name = "r-lombok-macros"
readme = "README.md"
repository = "https://github.com/dengzhq/r-lombok-macros"
authors = ["dengzq3 <dengzq3@xiaopeng.com>"]
version = "0.0.2"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.20"
proc-macro2 = "1.0.40"
syn = { version = "1.0.98", features = ["full"] }

