[package]
categories = ["macro"]
description = "r-lombok is a rust macros that automatically plugs into your editor and build tools"
edition = "2021"
homepage = "https://github.com/dengzhq/r-lombok-macros"
keywords = ["lombok"]
license = "MIT"
name = "r-lombok-macros"
readme = "README.md"
repository = "https://github.com/dengzhq/r-lombok-macros"
authors = ["dengzhq <690594922@qq.com>"]
version = "0.0.4"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.21"
proc-macro2 = "1.0.43"
syn = { version = "1.0.99", features = ["full"] }

